--- a/achievement/index.html
+++ b/achievement/index.html
@@ -15,7 +15,7 @@
 		<script type="module" src="../assets/scripts/achivementPage.js" defer></script>
 		<title>Achievement & Destinations</title>
 	</head>
-	<body id="achievementPage" class="Achievement">
+	<body id="achievementPage" class="Achievement" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
