--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -15,7 +15,7 @@
 		<script type="module" src="../assets/scripts/curriculumPage.js" defer></script>
 		<title>Curriculum, Teaching & Learning</title>
 	</head>
-	<body id="curriculumPage" class="Curriculum">
+	<body id="curriculumPage" class="Curriculum" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
