--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script type="module" src="./assets/scripts/mainPage.js" defer></script>
 		<title>Camden</title>
 	</head>
-	<body id="mainPage" class="mainPage">
+	<body id="mainPage" class="mainPage" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
