--- a/school/index.html
+++ b/school/index.html
@@ -18,7 +18,7 @@
 
 		<title>School</title>
 	</head>
-	<body id="schoolPage" class="schoolPage">
+	<body id="schoolPage" class="schoolPage" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
