--- a/schoolContext/index.html
+++ b/schoolContext/index.html
@@ -17,7 +17,7 @@
 		<script src="../assets/scripts/schoolContext.js" defer></script>
 		<title>School & Community Context</title>
 	</head>
-	<body id="schoolContext" class="schoolPage">
+	<body id="schoolContext" class="schoolPage" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
