--- a/support/index.html
+++ b/support/index.html
@@ -16,7 +16,7 @@
 
 		<title>Pupil Support & Wellbeing</title>
 	</head>
-	<body id="supportPage" class="Curriculum">
+	<body id="supportPage" class="Curriculum" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
