--- a/school/index.html
+++ b/school/index.html
@@ -10,6 +10,7 @@
 			rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/styles/global.css" />
 		<link rel="stylesheet" href="../assets/styles/components/header.css" />
+		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
 		<link rel="stylesheet" href="../assets/styles/pages/school.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -18,7 +19,7 @@
 
 		<title>School</title>
 	</head>
-	<body id="schoolPage" class="schoolPage" v-cloak>
+	<body v-cloak id="schoolPage" class="schoolPage">
 		<header>
 			<div class="header__container">
 				<div class="header__content">
@@ -121,7 +122,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs-block__item tab">
+							<!-- <div class="tabs-block__item tab">
 								<div class="tab__top">
 									<div class="tab__icon">
 										<img src="../assets/imgs/stars.png" alt="" />
@@ -161,13 +162,13 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="tabs-block__item tab">
 								<div class="tab__top">
 									<div class="tab__icon">
 										<img src="../assets/imgs/upgrade-icon.png" alt="" />
 									</div>
-									<p class="tab__title">Our school in 4 highlights</p>
+									<p class="tab__title">Our school in 5 headlines</p>
 									<div class="tab__close">
 										<img src="../assets/imgs/arrow-down.png" alt="" />
 									</div>
@@ -175,7 +176,10 @@
 								<div class="tab__content tab-content">
 									<div class="swiper tab-slider">
 										<div class="swiper-wrapper tab-slider__wrapper">
-											<div v-for="highlight in school.tabs.schoolHighlights" class="swiper-slide tab-slider__slide text-slide">
+											<div
+												v-for="highlight in school.tabs.schoolHighlights"
+												class="swiper-slide tab-slider__slide text-slide"
+												:style="`${highlight?.bgcolor ? `background: ${highlight.bgcolor}`:''} `">
 												<h3>{{highlight.title}}</h3>
 												<p>{{highlight.description}}</p>
 												<a target="_blank" :href="highlight.link">Learn more</a>
@@ -199,7 +203,10 @@
 								<div class="tab__content tab-content">
 									<div class="swiper tab-slider">
 										<div class="swiper-wrapper tab-slider__wrapper">
-											<div v-for="priority in school.tabs.schoolPriorities" class="swiper-slide tab-slider__slide text-slide">
+											<div
+												v-for="priority in school.tabs.schoolPriorities"
+												class="swiper-slide tab-slider__slide text-slide"
+												:style="`${priority?.bgcolor ? `background: ${priority.bgcolor}`:''} `">
 												<h3>{{priority.title}}</h3>
 												<p>{{priority.description}}</p>
 											</div>
@@ -228,6 +235,11 @@
 								<span class="button__text">Pupil support & wellbeing</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
 							</a>
+							<a :href="`/Camden/SEND/index.html?schoolId=${school.schoolId}`" class="navigation__button">
+								<div class="button__icon"><img src="../assets/imgs/holdingHands-icon.png" alt="" /></div>
+								<span class="button__text">SEND & Inclusion</span>
+								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
+							</a>
 							<a :href="`/Camden/achievement/index.html?schoolId=${school.schoolId}`" class="navigation__button">
 								<div class="button__icon"><img src="../assets/imgs/stats-4bars.png" alt="" /></div>
 								<span class="button__text">Pupils’ achievement</span>
@@ -240,14 +252,14 @@
 							</a>
 						</div>
 						<div class="navigation__link">
-							<img src="../assets/imgs/browser-black.png" alt="" /><a href="www.chrishatton.camden.sch.uk"
-								>www.chrishatton.camden.sch.uk</a
+							<img src="../assets/imgs/browser-black.png" alt="" /><a traget="_blank" :href="`${school.websiteLink}`"
+								>{{school.websiteLink}}</a
 							>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="verification">
+			<!-- <section class="verification">
 				<div class="verification__container">
 					<div class="verification__content">
 						<p>
@@ -256,7 +268,20 @@
 						</p>
 					</div>
 				</div>
-			</section>
+			</section> -->
 		</main>
+		<footer>
+			<div class="footer__container">
+				<div class="footer__content">
+					<div class="logo">
+						<a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+					</div>
+					<p class="text">
+						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
+						confirms that the information in this report is accurate at the date of publication.
+					</p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
