--- a/SEND/index.html
+++ b/SEND/index.html
@@ -10,6 +10,7 @@
 			rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/styles/global.css" />
 		<link rel="stylesheet" href="../assets/styles/components/header.css" />
+		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
 		<link rel="stylesheet" href="../assets/styles/pages/curriculum.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<script type="module" src="../assets/scripts/curriculumPage.js" defer></script>
