add difference between primary\secondary scools, remade charts and some text blocks

--- a/school/index.html
+++ b/school/index.html
@@ -72,7 +72,7 @@
 								</div>
 								<div class="tab__content tab-content">
 									<h5 class="tab-content__title">{{school.descriptionTitle}}</h5>
-									<p class="tab-content__text">{{school.description}}</p>
+									<p class="tab-content__text" v-html="school.description"></p>
 								</div>
 							</div>
 							<div class="tabs-block__item tab">
