--- a/SEND/index.html
+++ b/SEND/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="../assets/styles/global.css" />
 		<link rel="stylesheet" href="../assets/styles/components/header.css" />
 		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
-		<link rel="stylesheet" href="../assets/styles/pages/curriculum.css" />
+		<link rel="stylesheet" href="../assets/styles/pages/SEND.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<script type="module" src="../assets/scripts/curriculumPage.js" defer></script>
 		<title>SEND & Inclusion</title>
@@ -34,16 +34,16 @@
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
 						<h1 class="hero__title">SEND & Inclusion</h1>
-						<div class="hero__navigation page-navigation">
+						<div class="hero__navigation page-navigation with-gap">
 							<a href="#about-aims" class="page-navigation__button">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M6.44435 16.8329C6.14948 16.6688 5.9184 16.4474 5.7511 16.1687C5.58378 15.89 5.50012 15.5775 5.50012 15.231V10.8926L3.504 9.78873C3.3399 9.69515 3.21939 9.58129 3.14247 9.44716C3.06556 9.31302 3.0271 9.16398 3.0271 9.00003C3.0271 8.8361 3.06556 8.68715 3.14247 8.55318C3.21939 8.4192 3.3399 8.30541 3.504 8.21183L11.1391 4.05183C11.2746 3.97647 11.4142 3.92116 11.5578 3.88591C11.7015 3.85064 11.8489 3.83301 12.0001 3.83301C12.1513 3.83301 12.2987 3.85064 12.4423 3.88591C12.586 3.92116 12.7257 3.97638 12.8615 4.05158L21.4846 8.74451C21.6385 8.82784 21.7564 8.94056 21.8385 9.08266C21.9205 9.22474 21.9615 9.37805 21.9615 9.54258V15.4426C21.9615 15.655 21.8897 15.8332 21.7458 15.9769C21.602 16.1207 21.4238 16.1925 21.2112 16.1925C20.9986 16.1925 20.8206 16.1207 20.677 15.9769C20.5334 15.8332 20.4616 15.655 20.4616 15.4426V9.83103L18.5001 10.8926V15.231C18.5001 15.5775 18.4164 15.89 18.2491 16.1687C18.0818 16.4474 17.8507 16.6688 17.5558 16.8329L12.8636 19.3694C12.7264 19.4463 12.586 19.5024 12.4423 19.5377C12.2987 19.573 12.1513 19.5906 12.0001 19.5906C11.8489 19.5906 11.7015 19.573 11.5578 19.5377C11.4142 19.5024 11.2738 19.4463 11.1367 19.3694L6.44435 16.8329ZM11.8847 12.6426C11.9296 12.6682 11.9697 12.6811 12.0049 12.6811C12.0402 12.6811 12.0802 12.6682 12.1251 12.6426L18.8405 9.00028L12.1251 5.36761C12.0802 5.34196 12.0402 5.32913 12.0049 5.32913C11.9697 5.32913 11.9296 5.34196 11.8847 5.36761L5.15972 9.00028L11.8847 12.6426ZM11.8751 18.0714C11.92 18.097 11.9616 18.1099 12.0001 18.1099C12.0386 18.1099 12.0802 18.097 12.1251 18.0714L16.8558 15.5156C16.9071 15.4836 16.944 15.4467 16.9664 15.405C16.9889 15.3634 17.0001 15.3105 17.0001 15.2464V11.6926L12.8789 13.956C12.7418 14.0329 12.5995 14.089 12.452 14.1243C12.3046 14.1595 12.1539 14.1772 12.0001 14.1772C11.8462 14.1772 11.6956 14.1595 11.5482 14.1243C11.4007 14.089 11.2584 14.0329 11.1212 13.956L7.0001 11.6926V15.2464C7.0001 15.2977 7.01132 15.3473 7.03375 15.3954C7.0562 15.4435 7.09307 15.4836 7.14435 15.5156L11.8751 18.0714Z"
-										fill="#ED4D8B" />
+										fill="black" />
 								</svg>
 								<span>SEND Support</span>
 							</a>
-							<a href="#about-strengths" class="page-navigation__button">
+							<a href="#about-inclusion" class="page-navigation__button">
 								<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M14.5999 19.5462L19.7422 14.4038C19.8807 14.2654 20.0547 14.1946 20.2643 14.1913C20.4739 14.1882 20.6512 14.259 20.796 14.4038C20.9409 14.5487 21.0133 14.7244 21.0133 14.9308C21.0133 15.1372 20.9409 15.3128 20.796 15.4577L15.8806 20.3731C15.6999 20.5538 15.4973 20.6878 15.273 20.775C15.0486 20.8622 14.8242 20.9058 14.5999 20.9058C14.3755 20.9058 14.1512 20.8622 13.9268 20.775C13.7025 20.6878 13.4999 20.5538 13.3191 20.3731L11.223 18.2769C11.0845 18.1385 11.0137 17.9644 11.0105 17.7548C11.0073 17.5452 11.0781 17.368 11.223 17.2231C11.3679 17.0782 11.5435 17.0058 11.7499 17.0058C11.9563 17.0058 12.1319 17.0782 12.2768 17.2231L14.5999 19.5462ZM6.77296 12.45L5.69411 15.4981C5.63 15.6532 5.53705 15.7756 5.41526 15.8654C5.29346 15.9551 5.14988 16 4.98451 16C4.7076 16 4.49638 15.8885 4.35086 15.6654C4.20536 15.4423 4.18005 15.2058 4.27491 14.9558L8.47876 3.53268C8.54286 3.36729 8.6435 3.23717 8.78069 3.1423C8.91785 3.04743 9.07425 3 9.24989 3H9.83834C10.014 3 10.1704 3.04743 10.3076 3.1423C10.4447 3.23717 10.5454 3.36729 10.6095 3.53268L14.7941 14.9308C14.889 15.1975 14.8595 15.4423 14.7056 15.6654C14.5518 15.8885 14.3313 16 14.0441 16C13.8685 16 13.7114 15.951 13.573 15.8529C13.4345 15.7548 13.3332 15.6231 13.2691 15.4577L12.2345 12.45H6.77296ZM7.29986 11.05H11.7576L9.54989 4.8615H9.46911L7.29986 11.05Z"
@@ -58,46 +58,26 @@
 			<section class="about">
 				<div class="about__container">
 					<div class="about__content">
-						<div class="about-sector about-aims" id="about-aims">
-							<h2 class="about__title">What are the aims of our curriculum?</h2>
-							<p>{{school.curriculum.curriculumAim}}</p>
+						<div class="about-sector" id="about-aims">
+							<h2 class="about__title">How do we support children with Special Educational Needs & Disabilities (SEND)?</h2>
+							<p v-html="school.SEND?.sendSupportInfo"></p>
+							<a class="about__link" href="">View our behaviour policy</a>
 						</div>
-						<div class="about-sector about-strengths" id="about-strengths">
-							<h2 class="about__title">What are our main curriculum strengths?</h2>
+						<div class="about-sector">
+							<h2 class="about__title">Specific SEND needs supported (>5 pupils)</h2>
 							<div class="info-tags__block">
-								<div v-for="strengths in school.curriculum.curriculumStrengths" class="info-tag">
-									<!-- <img src="../assets/imgs/palette.png" alt="" /> -->
-									<span>{{strengths}}</span>
+								<div v-for="SEND in school.statistics.specificSEND" class="info-tag">
+									<span v-html="SEND"></span>
 								</div>
-								<!-- <div class="info-tag"><img src="../assets/imgs/palette.png" alt="" /><span>Creativity</span></div>
-								<div class="info-tag"><img src="../assets/imgs/basketball.png" alt="" /><span>Sports</span></div>
-								<div class="info-tag"><img src="../assets/imgs/science.png" alt="" /><span>Sciences</span></div> -->
+								<!-- <div class="info-tag"><span>Social, Emotional and Mental Health</span></div> -->
+								<!-- <div class="info-tag"><span>Hearing Impairment</span></div> -->
+								<!-- <div class="info-tag"><span>Visual Impairment</span></div> -->
+								<!-- <div class="info-tag"><span>Moderate Learning Difficulty</span></div> -->
 							</div>
 						</div>
-						<div class="about-sector about-subjects" id="about-subjects">
-							<h2 class="about__title">What subjects do we offer?</h2>
-							<p class="about-subjects__stages">Key Stage 5</p>
-							<h3 class="about__sub-title">A-Levels in:</h3>
-							<ul>
-								<li v-for="subject in school.curriculum.topSubjects">{{subject}}</li>
-								<!-- <li>English literature</li>
-								<li>Maths</li>
-								<li>Biology</li>
-								<li>Chemistry</li>
-								<li>Physics</li>
-								<li>Dance</li>
-								<li>Drama</li>
-								<li>Computer Science</li>
-								<li>French</li>
-								<li>Italian</li> -->
-							</ul>
-							<h3 class="about__sub-title">A-Levels in:</h3>
-							<ul>
-								<li v-for="discipline in school.curriculum.topDisciplines">{{discipline}}</li>
-								<!-- <li>Applied Sciences</li>
-								<li>Business Studies</li>
-								<li>Health Studies</li> -->
-							</ul>
+						<div class="about-sector" id="about-inclusion">
+							<h2 class="about__title">How do we ensure inclusive practice throughout our school?</h2>
+							<p v-html="school.SEND?.inclusivePracticeInfo"></p>
 						</div>
 					</div>
 				</div>
