--- a/support/index.html
+++ b/support/index.html
@@ -86,7 +86,7 @@
 							<p class="about__text">{{school.support.bullingProtection}}</p>
 							<a class="about__link" href="">View our behaviour policy</a>
 						</div>
-						<div class="about-sector" id="support-sector">
+						<!-- <div class="about-sector" id="support-sector">
 							<h2 class="about__title">
 								How do we support children with <span class="underlined">Special educational needs & disabilities (SEND)?</span>
 							</h2>
@@ -96,13 +96,10 @@
 								<div v-for="SEND in school.statistics.specificSEND" class="info-tag">
 									<span>{{SEND}}</span>
 								</div>
-								<!-- <div class="info-tag"><span>Social, Emotional and Mental Health</span></div> -->
-								<!-- <div class="info-tag"><span>Hearing Impairment</span></div> -->
-								<!-- <div class="info-tag"><span>Visual Impairment</span></div> -->
-								<!-- <div class="info-tag"><span>Moderate Learning Difficulty</span></div> -->
+								 
 							</div>
 							<a class="about__link" href="">View Camden SEND local offer</a>
-						</div>
+						</div> -->
 						<div class="about-sector" id="attendance-sector">
 							<h2 class="about__title">How do we ensure good pupil attendance?</h2>
 							<p class="about__text">{{school.support.attendanceManagement}}</p>
