--- a/SEND/index.html
+++ b/SEND/index.html
@@ -13,10 +13,10 @@
 		<link rel="stylesheet" href="../assets/styles/components/footer.css" />
 		<link rel="stylesheet" href="../assets/styles/pages/SEND.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-		<script type="module" src="../assets/scripts/curriculumPage.js" defer></script>
+		<script type="module" src="../assets/scripts/SENDPage.js" defer></script>
 		<title>SEND & Inclusion</title>
 	</head>
-	<body id="curriculumPage" class="Curriculum" v-cloak>
+	<body id="sendPage" class="SEND" v-cloak>
 		<header>
 			<div class="header__container">
 				<div class="header__content">
