school logo and name in header, remade tabs

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<div class="header__container">
 				<div class="header__content">
 					<div class="logo">
+						<!-- <a href="/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a> -->
 						<a href="/Camden/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a>
 					</div>
 				</div>
@@ -87,6 +88,10 @@
 								</div>
 
 								<div class="school-item__footer">
+									<!-- <a class="link" :href="`/school/index.html?schoolId=${school.schoolId}`">
+										<span>View school details</span>
+										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
+									</a> -->
 									<a class="link" :href="`/Camden/school/index.html?schoolId=${school.schoolId}`">
 										<span>View school details</span>
 										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
