--- a/school/index.html
+++ b/school/index.html
@@ -221,7 +221,7 @@
 										<div class="swiper-wrapper tab-slider__wrapper">
 											<div
 												v-for="priority in school.tabs.schoolPriorities"
-												class="swiper-slide tab-slider__slide text-slide"
+												class="swiper-slide tab-slider__slide text-slide priorities-slide"
 												:style="`${priority?.bgcolor ? `background: ${priority.bgcolor}`:''} `">
 												<h3>{{priority.title}}</h3>
 												<p>{{priority.description}}</p>
