--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -32,12 +32,12 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
-							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
-						>
-						<!-- <a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
+						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
+							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
+						>
 						<h1 class="hero__title">Curriculum, Teaching & Learning</h1>
 						<div class="hero__navigation page-navigation with-gap">
 							<a href="#about-aims" class="page-navigation__button">
@@ -120,8 +120,8 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<!-- <a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
-						<a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
 						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
