--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<div class="header__container">
 				<div class="header__content">
 					<div class="logo">
-						<a href="/"><img src="./assets/imgs/logo.png" alt="logo" /></a>
-						<!-- <a href="/Camden/"><img src="./assets/imgs/logo.png" alt="logo" /></a> -->
+						<!-- <a href="/"><img src="./assets/imgs/logo.png" alt="logo" /></a> -->
+						<a href="/Camden/"><img src="./assets/imgs/logo.png" alt="logo" /></a>
 					</div>
 				</div>
 			</div>
@@ -88,14 +88,14 @@
 								</div>
 
 								<div class="school-item__footer">
-									<a class="link" :href="`/school/?schoolId=${school.schoolId}`">
-										<span>View school details</span>
-										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
-									</a>
-									<!-- <a class="link" :href="`/Camden/school/?schoolId=${school.schoolId}`">
+									<!-- <a class="link" :href="`/school/?schoolId=${school.schoolId}`">
 										<span>View school details</span>
 										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
 									</a> -->
+									<a class="link" :href="`/Camden/school/?schoolId=${school.schoolId}`">
+										<span>View school details</span>
+										<img src="./assets/imgs/arrow-outward.png" alt="arrow" />
+									</a>
 								</div>
 							</div>
 							<!-- <div class="schools-list_item school-item">
