--- a/school/index.html
+++ b/school/index.html
@@ -242,7 +242,7 @@
 					<div class="navigation__content">
 						<h2 class="navigation__title">More about our school:</h2>
 						<div class="navigation__buttons">
-							<a :href="`/schoolContext/?schoolId=${school.schoolId}`" class="navigation__button">
+							<!-- <a :href="`/schoolContext/?schoolId=${school.schoolId}`" class="navigation__button">
 								<div class="button__icon"><img src="../assets/imgs/location.png" alt="" /></div>
 								<span class="button__text">School & community context</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
@@ -266,10 +266,10 @@
 								<div class="button__icon"><img src="../assets/imgs/teaching-icon.png" alt="" /></div>
 								<span class="button__text">Curriculum, teaching & learning</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
-							</a>
+							</a> -->
 
 							
-							<!-- <a :href="`/Camden/schoolContext/?schoolId=${school.schoolId}`" class="navigation__button">
+							<a :href="`/Camden/schoolContext/?schoolId=${school.schoolId}`" class="navigation__button">
 								<div class="button__icon"><img src="../assets/imgs/location.png" alt="" /></div>
 								<span class="button__text">School & community context</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
@@ -293,7 +293,7 @@
 								<div class="button__icon"><img src="../assets/imgs/teaching-icon.png" alt="" /></div>
 								<span class="button__text">Curriculum, teaching & learning</span>
 								<div class="button__arrow"><img src="../assets/imgs/arrow-down.png" alt="" /></div>
-							</a> -->
+							</a>
 						</div>
 						<div class="navigation__link">
 							<img src="../assets/imgs/browser-black.png" alt="" /><a traget="_blank" :href="`${school.websiteLink}`"
@@ -318,8 +318,8 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
-						<!-- <a href="/Camden"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<!-- <a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<a href="/Camden"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
 					</div>
 					<p class="text">
 						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
