sync prod with dev

--- a/achievement/index.html
+++ b/achievement/index.html
@@ -109,7 +109,7 @@
 							</div>
 						</div>
 						<div class="about-sector" id="preparation-sector">
-							<h2 class="about__title">Where do pupils go after they leave our school?</h2>
+							<h2 class="about__title">How do we set children up to prosper after they leave our school?</h2>
 							<p class="about__text" v-html="school.achievement.wherePupilsGoAfter"></p>
 							<!-- <a class="about__link" href="">Link to our careers advice policy</a>
 						</div> -->
@@ -122,7 +122,7 @@
 				<div class="footer__content">
 					<div class="logo">
 						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
-						<!-- <a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
 						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
