--- a/SEND/index.html
+++ b/SEND/index.html
@@ -93,10 +93,11 @@
 				<div class="footer__content">
 					<div class="logo">
 						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
-						<!-- <a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
-						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
+						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden
+						Learning as providing a true and fair picture of the school.
 					</p>
 				</div>
 			</div>
