--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="header__content">
 					<div class="logo">
 						<a href="/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a>
-						<!-- <a href="/index.html"><img src="./assets/imgs/logo.png" alt="logo" /></a> -->
+						<!-- <a href="/"><img src="./assets/imgs/logo.png" alt="logo" /></a> -->
 					</div>
 				</div>
 			</div>
