--- a/school/index.html
+++ b/school/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+		<script src="../assets/scripts/libs/qrcode.min.js" defer></script>
 		<script type="module" src="../assets/scripts/schoolPage.js" defer></script>
 
 		<title>School</title>
@@ -36,7 +37,7 @@
 					<div class="hero__content">
 						<div class="hero-title__block">
 							<h1 class="hero__title">{{school.schoolName}}</h1>
-							<!-- <div class="hero_share"><span>Share</span><img src="../assets/imgs/share.png" alt="" /></div> -->
+							<div open-share-popup class="hero_share"><span>Share</span><img src="../assets/imgs/share.png" alt="" /></div>
 						</div>
 						<p class="hero__address">{{school.address}} {{school.postCode}}</p>
 						<p class="hero__description" v-html="school.shortSlogan"></p>
@@ -61,7 +62,7 @@
 				<div class="about__container">
 					<div class="about__content">
 						<div class="about__report tabs-block">
-							<div v-if="school?.aboutReportCard" class="tabs-block__item tab">
+							<div class="tabs-block__item tab">
 								<div class="tab__top">
 									<div class="tab__icon"> 
 										<img src="../assets/imgs/info-icon.png" alt="" />
@@ -69,7 +70,7 @@
 									<p class="tab__title">What is a report card?</p>
 								</div>
 								<div class="tab__content tab-content">
-									<p class="tab-content__text" v-html="school.aboutReportCard"></p>
+									<p class="tab-content__text">This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.</p>
 								</div>
 							</div>
 						</div>
@@ -126,6 +127,10 @@
 									</div>
 									<a class="tab-content__link" target="_blank" :href="`${school.ofstedLink}`"
 										><span>What does Ofsted say about our school?</span><img src="../assets/imgs/arrow-forward.png" alt=""
+									/></a>
+									<br v-if="school?.churchLink">
+									<a v-if="school?.churchLink" class="tab-content__link" target="_blank" :href="`${school.churchLink}`"
+										><span>What does the Church say about our school?</span><img src="../assets/imgs/arrow-forward.png" alt=""
 									/></a>
 								</div>
 							</div>
@@ -331,7 +336,7 @@
 				<div class="footer__content">
 					<div class="logo">
 						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
-						<!-- <a href="/Camden/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
 						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
@@ -339,5 +344,23 @@
 				</div>
 			</div>
 		</footer>
+
+		<div class="popup-wrapper hidden">
+			<div class="popup share-popup">
+				<button close-popup class="popup__close-btn"><img src="../assets/imgs/close.svg" alt=""></button>
+				<h5 class="popup__title">Share this School</h5>
+				<p class="popup__description">Copy the link or share the QR code to share this school’s profile.</p>
+				<div class="share-block">
+					<label for="share-link">Tap to copy</label>
+					<div class="share-link-wrapper">
+						<input id="share-link" type="text" disabled :value="`${school.schoolLink}`">
+						<button><img src="../assets/imgs/copy.svg" alt="copy"></button>
+					</div>
+				</div>
+				<div class="popup__qrcode">
+					 
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
