--- a/schoolContext/index.html
+++ b/schoolContext/index.html
@@ -24,7 +24,7 @@
 			<div class="header__container">
 				<div class="header__content">
 					<div class="school__logo">
-						<img :src="`${school.schoolLogo}`" alt="logo" />
+						<img src="../assets/imgs/school/logo1.png" alt="logo" />
 					</div>
 					<h1 class="school__name">{{school.schoolName}}</h1>
 				</div>
@@ -34,11 +34,11 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
 
-						<!-- <a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
 						<h1 class="hero__title">School & Community Context</h1>
@@ -93,11 +93,11 @@
 						<div class="location" id="location-sector">
 							<div class="location__header">
 								<h2 class="context__title">Location</h2>
-								<!-- <a class="link" :href="school.websiteLink"
+								<a class="link" :href="school.websiteLink"
 									><span>View school details</span> <img src="../assets/imgs/arrow-outward.png" alt="arrow"
-								/></a> -->
+								/></a>
 							</div>
-							<p class="location__address">{{school.address}} {{school.postCode}}</p>
+							<p class="location__address">{{school.address}}</p>
 							<div class="location__map" id="map">
 								<!-- <iframe
 									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1243.0925765114478!2d-0.09896219758077963!3d51.45475690704054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604746be66215%3A0xec64c8e179cb9aee!2sHerne%20Hill%20School!5e0!3m2!1sen!2suk!4v1725605687032!5m2!1sen!2suk"
@@ -106,14 +106,14 @@
 									referrerpolicy="no-referrer-when-downgrade">
 								</iframe> -->
 							</div>
-							<!-- <div class="toggle-switch__block location__toggler-block">
+							<div class="toggle-switch__block location__toggler-block">
 								<div class="toggle-switch">
 									<input type="checkbox" id="switch1" />
 									<label for="switch1" class="toggle-switch__slider"></label>
 								</div>
 								<p>Show Previous Year Catchment*</p>
-							</div> -->
-							<!-- <label for="location-input">Travel times from you</label>
+							</div>
+							<label for="location-input">Travel times from you</label>
 							<div class="location-input__wrapper">
 								<input type="text" id="location-input" placeholder="SE1 0LH" />
 								<div class="location__input-button">Edit Postcode</div>
@@ -126,7 +126,7 @@
 								</div>
 								<div class="travel-time__item"><img src="../assets/imgs/walking-icon.png" alt="" /><span>24 min</span></div>
 								<div class="travel-time__item"><img src="../assets/imgs/bike-icon.png" alt="" /><span>24 min</span></div>
-							</div> -->
+							</div>
 						</div>
 						<div class="facilities" id="facilities-sector">
 							<h2 class="context__title facilities__title">What facilities do we have?</h2>
@@ -189,31 +189,27 @@
 							</div>
 							<div v-if="currentInfoBlock == 1" class="statistics__block statistics-block">
 								<div class="statistics-block__sector stats-sector">
-									<p class="stats-sector__name">Number of Forms of Entry</p>
-									<p class="stats-sector__description">{{school.entryForms}}</p>
-								</div>
-								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">Pupil numbers</p>
 									<p class="stats-sector__description">{{school.statistics.pupilsNum}}</p>
-									<!-- <div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
+									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
 										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>354</span></p>
 										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>324</span></p>
-									</div> -->
+									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">% Disadvantaged pupils</p>
 									<p class="stats-sector__description">{{school.statistics.disadvantagedPupilsPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>43%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>26%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>23%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>27%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">% English as an additional language</p>
 									<p class="stats-sector__description">{{school.statistics.englishAdditionalLangPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>57%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>49%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>25</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>32</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
@@ -232,8 +228,8 @@
 									<p class="stats-sector__name">% BME</p>
 									<p class="stats-sector__description">{{school.statistics.BMEPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>76%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>74%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>35%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>40%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
@@ -260,8 +256,8 @@
 									<p class="stats-sector__name">Special Educational Needs & Disabilities (SEND)</p>
 									<p class="stats-sector__description">{{school.statistics.SENDPercent}}%</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>16%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>15%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>9%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>16%</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
@@ -286,42 +282,42 @@
 									<p class="stats-sector__name">Pupil adult ratio</p>
 									<p class="stats-sector__description">{{school.statistics.pupilAdultRatio}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>9.4</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>10.8</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>354</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>324</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">% of teachers with Qualified Teacher Status</p>
 									<p class="stats-sector__description">{{school.statistics.qualifiedTeachersPercent}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>98%</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>96%</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>23%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>27%</span></p>
 									</div>
 								</div>
 							</div>
 							<div v-if="currentInfoBlock == 3" class="statistics__block statistics-block">
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">Financial reserves</p>
-									<p class="stats-sector__description">{{school.statistics.financialReserves}}</p>
+									<p class="stats-sector__description">£{{school.statistics.financialReserves}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>£170,500</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>£144,100</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>354</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>324</span></p>
 									</div>
 								</div>
 								<div class="statistics-block__sector stats-sector">
 									<p class="stats-sector__name">Change in reserves in last 12 months</p>
-									<p class="stats-sector__description">{{school.statistics.changeYearReserves}}</p>
+									<p class="stats-sector__description">-£{{school.statistics.changeYearReserves}}</p>
 									<div :class="{'_hidden': !showComparisonsInfo}" class="stats-sector__comparisons">
-										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>-£2,500</span></p>
-										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>-£41,700</span></p>
+										<p>Camden Average: <img src="../assets/imgs/stats-pink.png" alt="" /><span>23%</span></p>
+										<p>London Average: <img src="../assets/imgs/stats-orange.png" alt="" /><span>27%</span></p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="admissions-process" id="admissions-sector">
 							<h2 class="context__title">What is the admissions process for our school?</h2>
-							<p v-html="school?.admissionProcess"></p>
-							<!-- <a href="https://www.camden.gov.uk/school-admissions">View Camden admissions website</a> -->
+							<p>{{school.admissionProcess}}</p>
+							<a href="https://www.camden.gov.uk/home">View Camden admissions website</a>
 						</div>
 					</div>
 				</div>
@@ -331,12 +327,12 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
 						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
-						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden
-						Learning as providing a true and fair picture of the school.
+						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
+						confirms that the information in this report is accurate at the date of publication.
 					</p>
 				</div>
 			</div>
