--- a/SEND/index.html
+++ b/SEND/index.html
@@ -22,7 +22,7 @@
 			<div class="header__container">
 				<div class="header__content">
 					<div class="school__logo">
-						<img :src="`${school.schoolLogo}`" alt="logo" />
+						<img src="../assets/imgs/school/logo1.png" alt="logo" />
 					</div>
 					<h1 class="school__name">{{school.schoolName}}</h1>
 				</div>
@@ -32,10 +32,10 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
-						<!-- <a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
 						<h1 class="hero__title">SEND & Inclusion</h1>
@@ -66,7 +66,7 @@
 						<div class="about-sector" id="about-aims">
 							<h2 class="about__title">How do we support children with Special Educational Needs & Disabilities (SEND)?</h2>
 							<p v-html="school.SEND?.sendSupportInfo"></p>
-							<!-- <a class="about__link" href="">View our behaviour policy</a> -->
+							<a class="about__link" href="">View our behaviour policy</a>
 						</div>
 						<div class="about-sector">
 							<h2 class="about__title">Specific SEND needs supported (>5 pupils)</h2>
@@ -92,12 +92,12 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
-						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<!-- <a href="/Camden"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
-						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden
-						Learning as providing a true and fair picture of the school.
+						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
+						confirms that the information in this report is accurate at the date of publication.
 					</p>
 				</div>
 			</div>
