--- a/achievement/index.html
+++ b/achievement/index.html
@@ -15,14 +15,14 @@
 		<link rel="stylesheet" href="../assets/styles/pages/achievement.css" />
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<script type="module" src="../assets/scripts/achivementPage.js" defer></script>
-		<title>Pupils' Achievement</title>
+		<title>Achievement & Destinations</title>
 	</head>
 	<body id="achievementPage" class="Achievement" v-cloak>
 		<header class="header__school">
 			<div class="header__container">
 				<div class="header__content">
 					<div class="school__logo">
-						<img :src="`${school.schoolLogo}`" alt="logo" />
+						<img src="../assets/imgs/school/logo1.png" alt="logo" />
 					</div>
 					<h1 class="school__name">{{school.schoolName}}</h1>
 				</div>
@@ -32,13 +32,13 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
-						<!-- <a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
-						<h1 class="hero__title">Pupils' Achievement</h1>
+						<h1 class="hero__title">Achievement & Destinations</h1>
 						<div class="hero__navigation page-navigation">
 							<a href="#performance-sector" class="page-navigation__button">
 								<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,7 +79,7 @@
 			<section class="about">
 				<div class="about__container">
 					<div class="about__content">
-						<div class="toggle-switch__block about__toggler-block" v-if="school.isPrimary">
+						<div class="toggle-switch__block about__toggler-block">
 							<div class="toggle-switch">
 								<input type="checkbox" id="switch1" />
 								<label for="switch1" class="toggle-switch__slider"></label>
@@ -96,8 +96,8 @@
 						</div>
 						<div class="about-sector" id="success-sector">
 							<h2 class="about__title">How do we give your child the best chance of academic success?</h2>
-							<p v-html="school.achievement?.academicChildSuccess"></p>
-							<!-- <a href="" class="about__link">View our teaching and learning policy</a> -->
+							<p>{{school.achievement.academicChildSuccess}}</p>
+							<a href="" class="about__link">View our teaching and learning policy</a>
 						</div>
 
 						<div class="about-sector" id="destinations-sector" v-if="!school.isPrimary">
@@ -109,10 +109,10 @@
 							</div>
 						</div>
 						<div class="about-sector" id="preparation-sector">
-							<h2 class="about__title">How do we set children up to prosper after they leave our school?</h2>
-							<p class="about__text" v-html="school.achievement.wherePupilsGoAfter"></p>
-							<!-- <a class="about__link" href="">Link to our careers advice policy</a>
-						</div> -->
+							<h2 class="about__title">Where do pupils go after they leave our school?</h2>
+							<p class="about__text">{{school.achievement.wherePupilsGoAfter}}</p>
+							<a class="about__link" href="">Link to our careers advice policy</a>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -121,11 +121,12 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
 						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
-						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
+						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
+						confirms that the information in this report is accurate at the date of publication.
 					</p>
 				</div>
 			</div>
