--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -22,7 +22,7 @@
 			<div class="header__container">
 				<div class="header__content">
 					<div class="school__logo">
-						<img :src="`${school.schoolLogo}`" alt="logo" />
+						<img src="../assets/imgs/school/logo1.png" alt="logo" />
 					</div>
 					<h1 class="school__name">{{school.schoolName}}</h1>
 				</div>
@@ -32,22 +32,14 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<!-- <a :href="`/Camden/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
-						<a :href="`/school/index.html?schoolId=${school.schoolId}`" class="go-back-button"
+						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						>
 						<h1 class="hero__title">Curriculum, Teaching & Learning</h1>
 						<div class="hero__navigation page-navigation with-gap">
-							<a href="#about-strengths" class="page-navigation__button">
-								<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path
-										d="M14.5999 19.5462L19.7422 14.4038C19.8807 14.2654 20.0547 14.1946 20.2643 14.1913C20.4739 14.1882 20.6512 14.259 20.796 14.4038C20.9409 14.5487 21.0133 14.7244 21.0133 14.9308C21.0133 15.1372 20.9409 15.3128 20.796 15.4577L15.8806 20.3731C15.6999 20.5538 15.4973 20.6878 15.273 20.775C15.0486 20.8622 14.8242 20.9058 14.5999 20.9058C14.3755 20.9058 14.1512 20.8622 13.9268 20.775C13.7025 20.6878 13.4999 20.5538 13.3191 20.3731L11.223 18.2769C11.0845 18.1385 11.0137 17.9644 11.0105 17.7548C11.0073 17.5452 11.0781 17.368 11.223 17.2231C11.3679 17.0782 11.5435 17.0058 11.7499 17.0058C11.9563 17.0058 12.1319 17.0782 12.2768 17.2231L14.5999 19.5462ZM6.77296 12.45L5.69411 15.4981C5.63 15.6532 5.53705 15.7756 5.41526 15.8654C5.29346 15.9551 5.14988 16 4.98451 16C4.7076 16 4.49638 15.8885 4.35086 15.6654C4.20536 15.4423 4.18005 15.2058 4.27491 14.9558L8.47876 3.53268C8.54286 3.36729 8.6435 3.23717 8.78069 3.1423C8.91785 3.04743 9.07425 3 9.24989 3H9.83834C10.014 3 10.1704 3.04743 10.3076 3.1423C10.4447 3.23717 10.5454 3.36729 10.6095 3.53268L14.7941 14.9308C14.889 15.1975 14.8595 15.4423 14.7056 15.6654C14.5518 15.8885 14.3313 16 14.0441 16C13.8685 16 13.7114 15.951 13.573 15.8529C13.4345 15.7548 13.3332 15.6231 13.2691 15.4577L12.2345 12.45H6.77296ZM7.29986 11.05H11.7576L9.54989 4.8615H9.46911L7.29986 11.05Z"
-										fill="black" />
-								</svg>
-								<span>Strengths</span>
-							</a>
 							<a href="#about-aims" class="page-navigation__button">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
@@ -55,6 +47,14 @@
 										fill="black" />
 								</svg>
 								<span>Curriculum</span>
+							</a>
+							<a href="#about-strengths" class="page-navigation__button">
+								<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M14.5999 19.5462L19.7422 14.4038C19.8807 14.2654 20.0547 14.1946 20.2643 14.1913C20.4739 14.1882 20.6512 14.259 20.796 14.4038C20.9409 14.5487 21.0133 14.7244 21.0133 14.9308C21.0133 15.1372 20.9409 15.3128 20.796 15.4577L15.8806 20.3731C15.6999 20.5538 15.4973 20.6878 15.273 20.775C15.0486 20.8622 14.8242 20.9058 14.5999 20.9058C14.3755 20.9058 14.1512 20.8622 13.9268 20.775C13.7025 20.6878 13.4999 20.5538 13.3191 20.3731L11.223 18.2769C11.0845 18.1385 11.0137 17.9644 11.0105 17.7548C11.0073 17.5452 11.0781 17.368 11.223 17.2231C11.3679 17.0782 11.5435 17.0058 11.7499 17.0058C11.9563 17.0058 12.1319 17.0782 12.2768 17.2231L14.5999 19.5462ZM6.77296 12.45L5.69411 15.4981C5.63 15.6532 5.53705 15.7756 5.41526 15.8654C5.29346 15.9551 5.14988 16 4.98451 16C4.7076 16 4.49638 15.8885 4.35086 15.6654C4.20536 15.4423 4.18005 15.2058 4.27491 14.9558L8.47876 3.53268C8.54286 3.36729 8.6435 3.23717 8.78069 3.1423C8.91785 3.04743 9.07425 3 9.24989 3H9.83834C10.014 3 10.1704 3.04743 10.3076 3.1423C10.4447 3.23717 10.5454 3.36729 10.6095 3.53268L14.7941 14.9308C14.889 15.1975 14.8595 15.4423 14.7056 15.6654C14.5518 15.8885 14.3313 16 14.0441 16C13.8685 16 13.7114 15.951 13.573 15.8529C13.4345 15.7548 13.3332 15.6231 13.2691 15.4577L12.2345 12.45H6.77296ZM7.29986 11.05H11.7576L9.54989 4.8615H9.46911L7.29986 11.05Z"
+										fill="black" />
+								</svg>
+								<span>Strengths</span>
 							</a>
 							<a v-if="!school.isPrimary" href="#about-subjects" class="page-navigation__button">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -85,12 +85,12 @@
 						</div>
 						<div class="about-sector about-aims" id="about-aims">
 							<h2 class="about__title">What are the aims of our curriculum?</h2>
-							<p v-html="school.curriculum?.curriculumAim"></p>
+							<p>{{school.curriculum.curriculumAim}}</p>
 						</div>
 						<div v-if="!school.isPrimary" class="about-sector about-subjects" id="about-subjects">
 							<h2 class="about__title">What subjects do we offer?</h2>
-							<p class="about-subjects__stages">Key Stage 5 Subjects</p>
-							<!-- <h3 class="about__sub-title">A-Levels in:</h3> -->
+							<p class="about-subjects__stages">Key Stage 5</p>
+							<h3 class="about__sub-title">A-Levels in:</h3>
 							<ul class="info-tags__block">
 								<li v-for="subject in school.curriculum.topSubjects" class="info-tag">{{subject}}</li>
 								<!-- <li>English literature</li>
@@ -104,7 +104,7 @@
 								<li>French</li>
 								<li>Italian</li> -->
 							</ul>
-							<!-- <h3 class="about__sub-title">A-Levels in:</h3>
+							<h3 class="about__sub-title">A-Levels in:</h3>
 							<ul class="info-tags__block">
 								<li v-for="discipline in school.curriculum.topDisciplines" class="info-tag">{{discipline}}</li>
 								<!-- <li>Applied Sciences</li>
@@ -120,11 +120,12 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
+						<a href="/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
 						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
 					</div>
 					<p class="text">
-						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden Learning as providing a true and fair picture of the school.
+						Camden Learning, the local area-based education partnership, which supports the development of all Camden schools,
+						confirms that the information in this report is accurate at the date of publication.
 					</p>
 				</div>
 			</div>
