--- a/SEND/index.html
+++ b/SEND/index.html
@@ -32,12 +32,12 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
-							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
-						>
-						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
+						<a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
+							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
+						>
 						<h1 class="hero__title">SEND & Inclusion</h1>
 						<div class="hero__navigation page-navigation with-gap">
 							<a href="#about-aims" class="page-navigation__button">
