--- a/schoolLocation/index.html
+++ b/schoolLocation/index.html
@@ -61,8 +61,8 @@
 			<div class="footer__container">
 				<div class="footer__content">
 					<div class="logo">
-						<a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
-						<!-- <a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<!-- <a href="/index.html"><img src="../assets/imgs/logo-color.png" alt="logo" /></a> -->
+						<a href="/Camden/"><img src="../assets/imgs/logo-color.png" alt="logo" /></a>
 					</div>
 					<p class="text">
 						This is a pilot version of the School Report - we welcome your feedback. When finalised, it will be verified by Camden
