--- a/support/index.html
+++ b/support/index.html
@@ -33,13 +33,13 @@
 			<section class="hero">
 				<div class="hero__container">
 					<div class="hero__content">
-						<a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
-							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
-						>
-
-						<!-- <a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
+						<!-- <a :href="`/school/?schoolId=${school.schoolId}`" class="go-back-button"
 							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
 						> -->
+
+						<a :href="`/Camden/school/?schoolId=${school.schoolId}`" class="go-back-button"
+							><img src="../assets/imgs/arrow-back.png" alt="" /><span>Back</span></a
+						>
 						<h1 class="hero__title">Pupil Support & Wellbeing</h1>
 						<div class="hero__navigation page-navigation">
 							<a href="#happiness-sector" class="page-navigation__button">
